--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "framework": "vite",
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+    "rewrites": [
+        {
+            "source": "/((?!assets/.*).*)",
+            "destination": "/index.html"
+        }
+    ]
 }
